syntax = "proto2";

package Zko;

message ZkShaderProgram {
  required ZkShader vertexShader = 1;
  required ZkShader fragmentShader = 2;

  map<string, ZkShaderAttribute> attributes = 3;
  map<string, ZkShaderUniform> uniforms = 4;
}

message ZkShader {
  required string type = 1;
  required string source = 2;
}

message ZkShaderAttribute {
  required uint32 id = 1;
  required string attributeName = 2;
}

message ZkShaderUniform {
  required string uniformName = 1;
  required uint32 count = 2;
  required ZkDataType dataType = 3;
}

